# xcavate-solochain

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build-spec.sh
.github/workflows/: ci.yml  docker.yml  release.yml
chainspec/: xcavate-testnet.plain.json  xcavate-testnet.raw.json
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/education-regions/: Cargo.toml
pallets/education-regions/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/faucet/: Cargo.toml
pallets/faucet/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/marketplace/: Cargo.toml
pallets/marketplace/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/pallet-bucket/: CHANGELOG.md  Cargo.toml  README.md
pallets/pallet-bucket/src/: benchmarking.rs  default_weights.rs  functions.rs  impl_traits.rs  lib.rs  mock.rs  traits.rs  try_state.rs  types.rs  weights.rs
pallets/pallet-bucket/src/tests/: admins.rs  buckets.rs  contributors.rs  managers.rs  mod.rs  namespaces.rs  pause_writing.rs  resume_writing.rs  rotate_key.rs  tags.rs  write.rs
pallets/pallet-bucket/src/tests/traits/: bucket_manager.rs  create.rs  delete.rs  inspect.rs  mod.rs  user_management.rs
pallets/property-governance/: Cargo.toml
pallets/property-governance/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/property-management/: Cargo.toml
pallets/property-management/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/real-world-asset/: Cargo.toml
pallets/real-world-asset/src/: lib.rs  mock.rs  tests.rs  traits.rs
pallets/real-x-education/: Cargo.toml
pallets/real-x-education/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/regions/: Cargo.toml
pallets/regions/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/xcavate-whitelist/: Cargo.toml  README.md
pallets/xcavate-whitelist/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs  xcavate.rs
seed/: accounts.json
