[package]
name = "primitives"
description = "Shared primitive types for the Xcavate solochain runtime."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
frame-support = { features = ["experimental"], workspace = true }
sp-runtime.workspace = true

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-support/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"sp-runtime/try-runtime",
]
