[package]
name = "solochain-template-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-executive.workspace = true
frame-metadata-hash-extension.workspace = true
frame-support = { features = ["experimental"], workspace = true }
frame-system-benchmarking = { optional = true, workspace = true }
frame-system-rpc-runtime-api.workspace = true
frame-system.workspace = true
frame-try-runtime = { optional = true, workspace = true }
pallet-aura.workspace = true
pallet-balances.workspace = true
pallet-grandpa.workspace = true
pallet-sudo.workspace = true
pallet-timestamp.workspace = true

# Supporting FRAME pallets
pallet-assets.workspace = true
pallet-nfts.workspace = true
pallet-nft-fractionalization.workspace = true
pallet-assets-holder.workspace = true
pallet-assets-freezer.workspace = true

# Xcavate primitives + custom pallets
primitives.workspace = true
pallet-xcavate-whitelist.workspace = true
pallet-education-regions.workspace = true
pallet-real-x-education.workspace = true
pallet-regions.workspace = true
pallet-real-world-asset.workspace = true
pallet-marketplace.workspace = true
pallet-property-management.workspace = true
pallet-property-governance.workspace = true
pallet-bucket.workspace = true
pallet-faucet.workspace = true

pallet-transaction-payment-rpc-runtime-api.workspace = true
pallet-transaction-payment.workspace = true
scale-info = { features = ["derive", "serde"], workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
sp-api.workspace = true
sp-block-builder.workspace = true
sp-consensus-aura = { features = ["serde"], workspace = true }
sp-consensus-grandpa = { features = ["serde"], workspace = true }
sp-core = { features = ["serde"], workspace = true }
sp-genesis-builder.workspace = true
sp-inherents.workspace = true
sp-keyring.workspace = true
sp-offchain.workspace = true
sp-runtime = { features = ["serde"], workspace = true }
sp-session.workspace = true
sp-storage.workspace = true
sp-transaction-pool.workspace = true
sp-version = { features = ["serde"], workspace = true }

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-metadata-hash-extension/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-assets/std",
	"pallet-nfts/std",
	"pallet-nft-fractionalization/std",
	"pallet-assets-holder/std",
	"pallet-assets-freezer/std",
	"primitives/std",
	"pallet-xcavate-whitelist/std",
	"pallet-education-regions/std",
	"pallet-real-x-education/std",
	"pallet-regions/std",
	"pallet-real-world-asset/std",
	"pallet-marketplace/std",
	"pallet-property-management/std",
	"pallet-property-governance/std",
	"pallet-bucket/std",
	"pallet-faucet/std",
	"scale-info/std",
	"serde_json/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-keyring/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-nfts/runtime-benchmarks",
	"pallet-nft-fractionalization/runtime-benchmarks",
	"pallet-assets-holder/runtime-benchmarks",
	"pallet-assets-freezer/runtime-benchmarks",
	"primitives/runtime-benchmarks",
	"pallet-xcavate-whitelist/runtime-benchmarks",
	"pallet-education-regions/runtime-benchmarks",
	"pallet-real-x-education/runtime-benchmarks",
	"pallet-regions/runtime-benchmarks",
	"pallet-real-world-asset/runtime-benchmarks",
	"pallet-marketplace/runtime-benchmarks",
	"pallet-property-management/runtime-benchmarks",
	"pallet-property-governance/runtime-benchmarks",
	"pallet-bucket/runtime-benchmarks",
	"pallet-faucet/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-nfts/try-runtime",
	"pallet-nft-fractionalization/try-runtime",
	"pallet-assets-holder/try-runtime",
	"pallet-assets-freezer/try-runtime",
	"primitives/try-runtime",
	"pallet-xcavate-whitelist/try-runtime",
	"pallet-education-regions/try-runtime",
	"pallet-real-x-education/try-runtime",
	"pallet-regions/try-runtime",
	"pallet-real-world-asset/try-runtime",
	"pallet-marketplace/try-runtime",
	"pallet-property-management/try-runtime",
	"pallet-property-governance/try-runtime",
	"pallet-bucket/try-runtime",
	"pallet-faucet/try-runtime",
	"sp-runtime/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]
