[package]
name = "pallet-faucet"
version = "4.0.0-dev"
description = "Faucet pallet for distributing tGBP to XCAV holders"
authors = ["Xcavate Network"]
homepage = "https://xcavate.io"
edition = "2021"
license = "GPL-3.0-only"
publish = false
repository = "https://github.com/XcavateBlockchain/xcavate-node-paseo"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info         = { workspace = true, features = ["derive"] }

frame-benchmarking = { workspace = true, optional = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
sp-runtime         = { workspace = true }

[dev-dependencies]
sp-core              = { workspace = true, features = ["std"] }
sp-io                = { workspace = true, features = ["std"] }
sp-runtime           = { workspace = true, features = ["std"] }
pallet-assets        = { workspace = true, features = ["std"] }
pallet-balances      = { workspace = true, features = ["std"] }
parity-scale-codec   = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
