[package]
name = "pallet-bucket"
version = "0.1.0"
description = "The Xcavate pallet buckets"
edition = "2021"
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { features = ["derive"], workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
parity-scale-codec = { features = ["derive"], workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
sp-io = { workspace = true }
sp-keystore = { workspace = true, features = ["std"] }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]

std = [
    "frame-system/std",
    "scale-info/std",
    "frame-support/std",
    "sp-core/std",
    "frame-benchmarking?/std",
]

try-runtime = ["frame-system/try-runtime", "frame-support/try-runtime"]
