[package]
name = "pallet-real-x-education"
version = "4.0.0-dev"
description = "The Xcavate pallet realXeducation"
authors = ["Xcavate Network"]
homepage = "https://xcavate.io"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/XcavateBlockchain/MarketplaceMVP_Substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info         = { workspace = true, features = ["derive"] }

serde = { workspace = true, optional = true }
frame-benchmarking = { workspace = true, optional = true}
frame-support      = { workspace = true }
frame-system       = { workspace = true }

pallet-assets = { workspace = true }
pallet-nfts = { workspace = true }
pallet-balances = { workspace = true }
primitives = { path = "../../primitives", default-features = false }
pallet-xcavate-whitelist = { workspace = true }
pallet-education-regions = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
pallet-assets-holder = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"pallet-assets/std",
	"pallet-nfts/std",
	"pallet-balances/std",
	"primitives/std",
	"pallet-assets-holder/std",
	"pallet-xcavate-whitelist/std",
	"pallet-education-regions/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
